--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
   material_symbols_icons: ^4.2799.0
 
